# submodule-template

./: .gitignore  CMakeLists.txt  README.md  setup.py  {submodule}.code-workspace
.github/workflows/: ci-documentation.yml
cmake/: definitions.cmake  dev-mode.cmake  options.cmake
cmake/automatics/: docs.cmake
cmake/presets/: common.json  linux.json  macos.json  windows.json
cmake/tools/: TargetInfoHeader.cmake
code/: CMakeLists.txt
code/headers/golxzn/{module}/: {submodule}.hpp
code/sources/{module}/: {submodule}.cpp
docs/: Doxyfile.in
tests/: CMakeLists.txt
tests/code/: {submodule}.cpp
